--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Faegheh Sardari</a></h1>
-				<span class="position"><a href="#">Computer Vision Ph.D. Student</span>
+				<!--<span class="position"><a href="#">Computer Vision Ph.D. Student</span>-->
+				<span class="position">Computer Vision Ph.D. Student</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
