--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		<div id="colorlib-main">
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
-					<ul class="slides">
+					<!--<ul class="slides">-->
+					<ul>
 				   	<!--<li style="background-image: url(images/img_bg_1.jpg);">-->
 				        <li>
 				   		<div class="overlay"></div>
@@ -111,7 +112,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				   		</div>
 				   	</li>
 				   	<!--<li style="background-image: url(images/img_bg_2.jpg);">-->
-					<li>
+					<!--<li>
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -126,7 +127,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   			</div>
 					   		</div>
 				   		</div>
-				   	</li>
+				   	</li>-->
 				  	</ul>
 			  	</div>
 			</section>
