--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						   					<!--<h1>Hi! <br>I'm Jackson</h1>
 						   					<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
 												<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>-->
-											<h2>I am Faegheh Sardari a third-year computer vision PhD student supervised by Prof. Majid Mirmehdi at Visual Information laboratory (VI-Lab), University of Bristol where I am working on view-invariant action or movemnet analysis. I completed my master in artificial intelligence at the Shahid Beheshti University, Tehran, Iran, where I used to work on object tracking methods</h2>
+											<h2>I am a third-year computer vision Ph.D. student supervised by Prof. Majid Mirmehdi at Visual Information laboratory (VI-Lab), University of Bristol where I am working on view-invariant action or movemnet analysis. I completed my master in artificial intelligence at the Shahid Beheshti University, Tehran, Iran, where I used to work on object tracking methods</h2>
 										</div>
 					   				</div>
 					   			</div>
