--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						   					<!--<h1>Hi! <br>I'm Jackson</h1>
 						   					<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
 												<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>-->
-											<h2>I am a third-year computer vision Ph.D. student supervised by Prof. Majid Mirmehdi at Visual Information laboratory (VI-Lab), University of Bristol where I am working on view-invariant action or movemnet analysis. I completed my master in artificial intelligence at the Shahid Beheshti University, Tehran, Iran, where I used to work on object tracking methods</h2>
+											<span class="heading-meta">About Us</span>
+											<h2 class="colorlib-heading">Who Am I?</h2>
+											<p><strong>Hi I'm Jackson Ford</strong> On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+											<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+									
 										</div>
 					   				</div>
 					   			</div>
