--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/my-profile.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Faegheh Sardari</a></h1>
+				<h2 id="colorlib-logo"><a href="index.html">Faegheh Sardari</a></h2>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
