--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/my-profile.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Faegheh Sardari</a></h1>
-				<p><b>Computer Vision Ph.D. student</b></p>
+				<p>Computer Vision Ph.D. student</p>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
